# weather

./: .gitignore  Cargo.toml  README.md  mprocs_launch.nu
src/: debug_panel.rs  location.rs  main.rs  ui.rs  utils.rs  weather.rs
