[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
eframe = "0.29.1"
egui-dropdown = "0.11"
reqwest = {version = "0.12.8", features = ["json", "blocking"]}
serde = "1.0.213"
serde_derive = "1.0.213"
serde_json = "1.0.132"
catppuccin-egui = { version = "5.3.1", default-features = false, features = ["egui29"] }
